+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.7 Release Candidate 1?
=============================================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #7079: Fix a possible crash when closing a file object while using
  it from another thread.  Patch by Daniel Stutzbach.

Library
-------

- Issue #8759: Fixed user paths in sysconfig for posix and os2 schemes.

- Issue #1285086: Speed up urllib.quote and urllib.unquote for simple cases.

- Issue #8688: Distutils now recalculates MANIFEST everytime.

- Issue #5099: subprocess.Popen's __del__ method (and the methods it calls)
  referenced global objects, causing errors to pop up during interpreter
  shutdown.

Extension Modules
-----------------

- Issue #8674: Fixed a number of incorrect or undefined-behaviour-inducing
  overflow checks in the audioop module.

Tests
-----

- On darwin, test_site assumed that a framework build was being used, leading
  to a failure where four directories were expected for site-packages instead
  of two in a non-framework build.


What's New in Python 2.7 beta 2?
================================

*Release date: 2010-05-08*

Core and Builtins
-----------------

- Run Clang 2.7's static analyzer for Objects/ and Python/ .

- Issue #1533: fix inconsistency in range function argument
  processing: any non-float non-integer argument is now converted to
  an integer (if possible) using its __int__ method.  Previously, only
  small arguments were treated this way; larger arguments (those whose
  __int__ was outside the range of a C long) would produce a TypeError.

- Issue #8202: sys.argv[0] is now set to '-m' instead of '-c' when
  searching for the module file to be executed with the -m command
  line option

- Issue #7319: When -Q is used, do not silence DeprecationWarning.

- Issue #7332: Remove the 16KB stack-based buffer in